--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "City Guesser Fullscreen FIx",
+  "name": "City Guesser Fullscreen Fix",
   "version": "1.0.0",
 
   "description": "Fix video zoomed in while using full screen (F11)",
-  "homepage_url": "https://github.com/amitDavid/mistype_language_switcher",
+  "homepage_url": "https://github.com/AmitDavid/city_guesser_fullscreen_fix",
 
   "icons": {
     "16": "MapPin.svg",
